tests/ui/traits/next-solver/normalize/normalize-assoc-ty-expected-int-var-no-ice-2.next.stderr
error[E0271]: expected `foo` to return `{integer}`, but it returns `impl Sized`
  --> $DIR/normalize-assoc-ty-expected-int-var-no-ice-2.rs:13:10
   |
LL | fn foo() -> impl Sized {}
   |             ---------- the found opaque type
...
LL |     proj(x, 1);
   |     ---- ^ expected integer, found opaque type
   |     |
   |     required by a bound introduced by this call
   |
   = note:     expected type `{integer}`
           found opaque type `impl Sized`
note: required by a bound in `proj`
  --> $DIR/normalize-assoc-ty-expected-int-var-no-ice-2.rs:9:24
   |
LL | fn proj<T: FnOnce() -> U, U>(x: Option<T>, y: U) {}
   |                        ^ required by this bound in `proj`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
